Grouped series graph - prevent legend labels wrapping

--- a/styles/common/graph.scss
+++ b/styles/common/graph.scss
@@ -583,7 +583,7 @@ figure.graph {
           width: 28%;
         }
         &.labels-for-total li {
-          width: 42%;
+          width: 38%;
         }
       }
     }
